#70 adding secrets docs
