# src/stores/api/handlers/secrets.go
@@ -30,6 +30,15 @@ func (h *SecretsHandler) Register(r *mux.Router) {
 	r.Methods(http.MethodGet).Path("/{id}").HandlerFunc(h.getOne)
 }
 
+// @Summary Create new secret
+// @Description Create new secret on selected store
+// @Tags Secrets
+// @Accept json
+// @Produce json
+// @Param storeName path string true "Selected StoreID"
+// @Param request body types.SetSecretRequest true "Create secret request"
+// @Success 200 {object} types.SecretResponse "Secret object"
+// @Router /stores/{storeName}/secrets [post]
 func (h *SecretsHandler) set(rw http.ResponseWriter, request *http.Request) {
 	rw.Header().Set("Content-Type", "application/json")
 	ctx := request.Context()
@@ -58,6 +67,15 @@ func (h *SecretsHandler) set(rw http.ResponseWriter, request *http.Request) {
 	_ = json.NewEncoder(rw).Encode(formatters.FormatSecretResponse(secret))
 }
 
+// @Summary Get secret by id
+// @Description Retrieve secret information by ID
+// @Tags Secrets
+// @Accept json
+// @Produce json
+// @Param storeName path string true "Selected StoreID"
+// @Param id path string true "Secret ID"
+// @Success 200 {object} types.SecretResponse "Secret object"
+// @Router /stores/{storeName}/secrets/{id} [get]
 func (h *SecretsHandler) getOne(rw http.ResponseWriter, request *http.Request) {
 	rw.Header().Set("Content-Type", "application/json")
 	ctx := request.Context()
@@ -80,6 +98,14 @@ func (h *SecretsHandler) getOne(rw http.ResponseWriter, request *http.Request) {
 	_ = json.NewEncoder(rw).Encode(formatters.FormatSecretResponse(secret))
 }
 
+// @Summary List secret ids
+// @Description List secret ids stored in the selected secret storage
+// @Tags Secrets
+// @Accept json
+// @Produce json
+// @Param storeName path string true "Selected StoreID"
+// @Success 200 {array} []types.SecretResponse "Array of secret ids"
+// @Router /stores/{storeName}/secrets [get]
 func (h *SecretsHandler) list(rw http.ResponseWriter, request *http.Request) {
 	rw.Header().Set("Content-Type", "application/json")
 	ctx := request.Context()
